--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,10 +135,8 @@ jobs:
         id: save_notes
         run: |
           # Read the release notes and prepare for output
-          NOTES=$(cat release_notes.md)
-          # Use jq to properly escape the content for JSON
-          NOTES_ESCAPED=$(echo "$NOTES" | jq -Rs .)
-          echo "release_notes=$NOTES_ESCAPED" >> $GITHUB_OUTPUT
+          cat release_notes.md > release_notes_final.md
+          echo "release_notes=See GitHub Release for complete notes" >> $GITHUB_OUTPUT
       
       - name: Create GitHub Release
         id: create_release
@@ -151,15 +149,15 @@ jobs:
           body_path: release_notes.md
           draft: false
           prerelease: false
-      
+
       - name: Set outputs
         id: release
         run: |
           echo "release_created=true" >> $GITHUB_OUTPUT
           echo "version=${{ steps.extract_version.outputs.version }}" >> $GITHUB_OUTPUT
           echo "upload_url=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_OUTPUT
-          # Correctly write multiline release notes output
-          printf "release_notes<<EOF\n%s\nEOF\n" "${{ steps.save_notes.outputs.release_notes }}" >> $GITHUB_OUTPUT
+          # Use a simplified release notes approach for version.json
+          echo 'release_notes={"version":"${{ steps.extract_version.outputs.version }}","title":"Release ${{ github.ref_name }}","date":"'$(date +%Y-%m-%d)'","notes":"See GitHub Release for complete notes"}' >> $GITHUB_OUTPUT
 
       - name: Debug release outputs
         run: |
