--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*' # Run workflow on version tags, e.g., v1.0.0
       - 'timerV*'
+permissions:
+  contents: write
+  packages: read
 
 jobs:
   release-please:
@@ -94,7 +97,7 @@ jobs:
       - name: Generate Release Notes for GitHub Release
         run: |
           # Generate release notes for current version
-          echo "# Release ${{ env.TAG_NAME }} ($(date '+%Y-%m-%d'))" > release_notes.md
+          echo "# Release ${{ steps.extract_version.outputs.version }} ($(date '+%Y-%m-%d'))" > release_notes.md
           echo "" >> release_notes.md
           
           # Try to generate notes just for the current release
@@ -128,8 +131,13 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add CHANGELOG.md
-          git commit -m "docs: update CHANGELOG.md for release ${{ env.TAG_NAME }}" || echo "No changes to commit"
-          git push origin HEAD:main || echo "Failed to push changes"
+          git commit -m "docs: update CHANGELOG.md for release ${{ steps.extract_version.outputs.version }}" || echo "No changes to commit"
+          
+          # Push using token-based authentication with explicit permissions
+          git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main || {
+            echo "Failed to push changes to main branch. This could be due to permission issues."
+            echo "You may need to add write permissions for the workflow."
+          }
 
       - name: Save Release Notes
         id: save_notes
@@ -510,6 +518,9 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+        with:
+          ref: main  # Explicitly checkout the main branch
+          fetch-depth: 0  # Get full history
 
       - name: Download SHA256 artifacts
         uses: actions/download-artifact@v4
@@ -563,4 +574,6 @@ jobs:
           git config --global user.email "actions@github.com"
           git add version.json
           git commit -m "Update version.json to ${{ needs.release-please.outputs.version }}" || echo "No changes to commit"
-          git push origin main
+          
+          # Push using the GitHub token for authentication
+          git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
