fix a concatenation bug in release-please

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,22 +114,22 @@ jobs:
             
             # Debug: Show what our grep would find as features
             echo "Feature commits found (debug):"
-            git log "$PREV_TAG..$TAG_NAME" --pretty=format:"%h %s" | grep -i "feat"
+            git log "$PREV_TAG..$TAG_NAME" --pretty=format:"%h %s" | grep -i "feat" || true
             
             # Get the list of commits between the tags with better pattern matching
             echo "### Features:" >> release_notes.md
-            git log "$PREV_TAG..$TAG_NAME" --pretty=format:"* %s (%h)" | grep -i -E "^feat|^* feat" >> release_notes.md || echo "* No new features in this release" >> release_notes.md
+            git log "$PREV_TAG..$TAG_NAME" --pretty=format:"* %s (%h)" | grep -i -E "^\*? feat" >> release_notes.md || echo "* No new features in this release" >> release_notes.md
             echo "" >> release_notes.md
             echo "" >> release_notes.md
             
             echo "### Bug Fixes:" >> release_notes.md
-            git log "$PREV_TAG..$TAG_NAME" --pretty=format:"* %s (%h)" | grep -i -E "^fix|^* fix" >> release_notes.md || echo "* No bug fixes in this release" >> release_notes.md
+            git log "$PREV_TAG..$TAG_NAME" --pretty=format:"* %s (%h)" | grep -i -E "^\*? fix" >> release_notes.md || echo "* No bug fixes in this release" >> release_notes.md
             echo "" >> release_notes.md
             echo "" >> release_notes.md
             
             echo "### Other Changes:" >> release_notes.md
             # Exclude both feat and fix with expanded pattern matching
-            git log "$PREV_TAG..$TAG_NAME" --pretty=format:"* %s (%h)" | grep -v -i -E "^feat|^* feat|^fix|^* fix" >> release_notes.md || echo "* No other changes in this release" >> release_notes.md
+            git log "$PREV_TAG..$TAG_NAME" --pretty=format:"* %s (%h)" | grep -v -i -E "^\*? feat|^\*? fix" >> release_notes.md || echo "* No other changes in this release" >> release_notes.md
             echo "" >> release_notes.md
           else
             echo "No previous tag found, using recent commits"
