--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,9 @@ cython_debug/
 *.key
 
 .vscode/settings.json
+.claude/settings.local.json
+epub_test_results_20260125_155837.json
+epub_test_results_20260125_171838.json
+epub_test_results_20260125_172640.json
+epub_test_results_20260126_220940.json
+epub_test_results_20260126_221035.json
